--- a/index.html
+++ b/index.html
@@ -58,19 +58,128 @@
     </section>
 
 
-    <section id="work">
-        <h2>Projects</h2>
-        <div class="projects">
-            <a href="https://cmst386-jstanley25.azurewebsites.net/project1/project1.html">Search Engine Optimization
-                Basics</a>
-            <a href="https://cmst386-jstanley25.azurewebsites.net/project3/project3.html">Responsive Design &
-                Analytics</a>
-            <a href="https://cmst386-jstanley25.azurewebsites.net/project4/index.html#gsc.tab=0">Mountain Momma's
-                Bakery</a>
-            <a href="https://www.spatial.io/s/Kothos-68895826f734432bbfb0b3f2">Spatial.io World</a>
-            <!-- Add more -->
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="projects-container">
+            <!-- Project 1 -->
+            <div class="project-card">
+                <img src="Images/SEO.png" alt="SEO Basics Project Thumbnail">
+                <h3>Understanding Search Engine Optimization Basics</h3>
+                <p>This project explores the fundamentals of SEO and demonstrates how search engines operate through
+                    crawling, indexing, and ranking. It highlights the role of meta tags, focusing on keywords and
+                    descriptions, to improve search visibility and click-through rates. The project also explains how to
+                    create relevant content links using effective anchor text, maintaining contextual and destination
+                    relevance, and providing clear link purposes. Lastly, it emphasizes the importance of proper heading
+                    hierarchy to organize content logically, improve readability, and signal content importance to
+                    search
+                    engines, improving discoverability and user experience.</p>
+                <a href="#" class="btn">View Project</a>
+            </div>
+
+            <!-- Project 2 with pop-up gallery -->
+            <div class="project-card">
+                <img src="Images/SASS_1.png" alt="Responsive Design & Analytics Thumbnail" class="popup-trigger"
+                    data-images="Images/SASS_1.png,Images/SASS_2.png">
+                <h3>Responsive Design & Analytics</h3>
+                <p>This project demonstrates the importance of responsive web design and preprocessing in modern web
+                    development. It highlights how responsive layouts enhance user experience by adapting to various
+                    screen
+                    sizes, improving accessibility, SEO rankings, and reducing bounce rates. The project also explores
+                    website analytics, focusing on key Google Analytics reports such as Audience, Acquisition, and
+                    Behavior,
+                    providing valuable insights into user demographics, traffic sources, and engagement. Additionally,
+                    it
+                    compares client-side and server-side preprocessing techniques, showcasing the benefits of tools like
+                    LESS and SASS for efficient styling, reusable code, and improved site performance.</p>
+                <a href="#" class="btn">View Project</a>
+            </div>
+
+            <!-- Project 3 -->
+            <div class="project-card">
+                <video controls poster="Images/Mountain_Momma_Bakery.png">
+                    <source src="Video/Mountain_Momma_Bakery.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <h3>Mountain Mamma's Bakery Website</h3>
+                <p>This project is a fully responsive, 10-page website designed for a fictional home-based bakery
+                    located in
+                    West Virginia. The site highlights the bakery’s products and services with a visually appealing
+                    wheat-toned theme, hero images, and a fixed navigation menu for easy browsing. It includes a blog,
+                    gallery, menu, services, and contact page with a functional form and validation. Accessibility and
+                    SEO
+                    best practices were implemented, including meta tags, optimized images, a privacy policy, and an XML
+                    sitemap. This project demonstrates my ability to design a professional, user-friendly website with
+                    consistent branding and engaging content.</p>
+                <a href="#" class="btn">View Project</a>
+            </div>
+
+            <!-- Project 4 -->
+            <div class="project-card">
+                <video controls poster="Images/Great_Escape.png">
+                    <source src="Video/Great_Escape.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <h3>Great Escape</h3>
+                <p>Great Escape is a fast-paced 3D endless runner game set in a bustling city environment. Built with
+                    Unity,
+                    the game challenges players to navigate through streets filled with traffic barriers, cones, and
+                    other
+                    obstacles while collecting stars to increase their score. Featuring engaging background music and
+                    immersive particle effects, the game delivers a visually dynamic and entertaining experience.
+                    Designed
+                    with responsive controls and smooth mechanics, Great Escape demonstrates my ability to create
+                    interactive gameplay, implement collision detection, manage scoring systems, and integrate
+                    audio-visual
+                    elements in a polished Unity project.</p>
+                <a href="#" class="btn">View Project</a>
+            </div>
+
+            <!-- Project 5 -->
+            <div class="project-card">
+                <video controls poster="Images/Kothos_Campground.png">
+                    <source src="Video/Kothos_Campground.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <h3>Kothos Campground</h3>
+                <p>Kothos Campground is a fully immersive 3D virtual environment created with Unity and hosted on
+                    Spatial.io. Designed as a social, interactive space, it features four distinct areas, including a
+                    large
+                    tent, ten log seats arranged around a lively campfire with particle effects and realistic sound, and
+                    a
+                    central plaza illuminated by streetlights. The main hub includes a gazebo surrounded by four
+                    benches,
+                    each accommodating multiple users, and a portal connecting to classmates’ projects for collaborative
+                    exploration. This project showcases skills in 3D modeling, spatial design, audio integration, and
+                    interactive environment building for social virtual experiences.</p>
+                <a href="#" class="btn">View Project</a>
+            </div>
+
+            <!-- Project 6 -->
+            <div class="project-card">
+                <img src="Images/Morgan_Wallen.png" alt="Morgan Wallen Fan Website" class="popup-trigger"
+                    data-images="Images/Morgan_Wallen.png,Images/Morgan_Wallen_2.png,Images/Morgan_Wallen_3.png,Images/Morgan_Wallen_4.png">
+                <h3>Morgan Wallen Fan Website</h3>
+                <p>This multi-page fan website is dedicated to country artist Morgan Wallen and showcases his music,
+                    albums,
+                    and news updates. The home page features a hero image with a brief introduction about the artist.
+                    The
+                    music page displays four album covers, each expanding into a dropdown list of songs. Clicking on a
+                    song
+                    triggers a pop-up that plays the track directly from YouTube for a seamless listening experience.
+                    The
+                    news page includes a gallery where each image links to related articles for easy access to updates.
+                    This
+                    project highlights skills in interactive UI design and multimedia integration.</p>
+                <a href="#" class="btn">View Project</a>
+            </div>
         </div>
     </section>
+
+    <!-- Popup Gallery Modal -->
+    <div id="popup-gallery" class="popup-gallery">
+        <span class="close-btn">&times;</span>
+        <div class="gallery-images"></div>
+    </div>
 
     <section id="contact">
         <h2>Contact Me</h2>
