Made some styling changes for the images and videos

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     hierarchy to organize content logically, improve readability, and signal content importance to
                     search
                     engines, improving discoverability and user experience.</p>
-                <a href="#" class="btn">View Project</a>
+                <a href="javascript:void(0);" class="btn popup-trigger" data-media="Images/SEO_1.png">View Project</a>
             </div>
 
             <!-- Project 2 with pop-up gallery -->
@@ -91,7 +91,8 @@
                     it
                     compares client-side and server-side preprocessing techniques, showcasing the benefits of tools like
                     LESS and SASS for efficient styling, reusable code, and improved site performance.</p>
-                <a href="#" class="btn">View Project</a>
+                <a href="javascript:void(0);" class="btn popup-trigger"
+                    data-media="Images/SASS_1.png,Images/SASS_2.png">View Project</a>
             </div>
 
             <!-- Project 3 -->
@@ -110,7 +111,9 @@
                     best practices were implemented, including meta tags, optimized images, a privacy policy, and an XML
                     sitemap. This project demonstrates my ability to design a professional, user-friendly website with
                     consistent branding and engaging content.</p>
-                <a href="#" class="btn">View Project</a>
+                <a href="javascript:void(0);" class="btn popup-trigger"
+                    data-media="Video/Mountain_Momma_Bakery.mp4">View
+                    Project</a>
             </div>
 
             <!-- Project 4 -->
@@ -131,7 +134,8 @@
                     interactive gameplay, implement collision detection, manage scoring systems, and integrate
                     audio-visual
                     elements in a polished Unity project.</p>
-                <a href="#" class="btn">View Project</a>
+                <a href="javascript:void(0);" class="btn popup-trigger" data-media="Video/Great_Escape.mp4">View
+                    Project</a>
             </div>
 
             <!-- Project 5 -->
@@ -151,7 +155,8 @@
                     each accommodating multiple users, and a portal connecting to classmates’ projects for collaborative
                     exploration. This project showcases skills in 3D modeling, spatial design, audio integration, and
                     interactive environment building for social virtual experiences.</p>
-                <a href="#" class="btn">View Project</a>
+                <a href="javascript:void(0);" class="btn popup-trigger" data-media="Video/Kothos_Campground.mp4">View
+                    Project</a>
             </div>
 
             <!-- Project 6 -->
@@ -170,7 +175,9 @@
                     news page includes a gallery where each image links to related articles for easy access to updates.
                     This
                     project highlights skills in interactive UI design and multimedia integration.</p>
-                <a href="#" class="btn">View Project</a>
+                <a href="javascript:void(0);" class="btn popup-trigger"
+                    data-media="Images/Morgan_Wallen.png,Images/Morgan_Wallen_2.png,Images/Morgan_Wallen_3.png,Images/Morgan_Wallen_4.png">View
+                    Project</a>
             </div>
         </div>
     </section>
