Updated SEO image

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     hierarchy to organize content logically, improve readability, and signal content importance to
                     search
                     engines, improving discoverability and user experience.</p>
-                <a href="javascript:void(0);" class="btn popup-trigger" data-media="Images/SEO_1.png">View Project</a>
+                <a href="javascript:void(0);" class="btn popup-trigger" data-media="Images/SEO.png">View Project</a>
             </div>
 
             <!-- Project 2 with pop-up gallery -->
