--- a/index.html
+++ b/index.html
@@ -188,6 +188,19 @@
         <div class="gallery-images"></div>
     </div>
 
+    <section id="resume">
+        <h2>My Resume</h2>
+        <div class="resume-container">
+            <!-- Embedded Preview -->
+            <iframe src="Documents/Stanley_Resume.pdf#toolbar=0" width="100%" height="600px"
+                title="John Stanley Resume"></iframe>
+
+            <!-- Download Button -->
+            <a href="Documents/Stanley_Resume.pdf" class="btn" download>Download My Resume</a>
+        </div>
+    </section>
+
+
     <section id="contact">
         <h2>Contact Me</h2>
         <form id="contactForm" onsubmit="sendEmail(event)">
