--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF‑8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Your Name | Portfolio</title>
+    <title>John Stanley | Portfolio</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 
@@ -182,7 +182,7 @@
 
             <!-- Project 7 -->
             <div class="project-card">
-                <video controls poster="images/project7-thumbnail.jpg">
+                <video controls poster="Images/Mountain_Momma_Bakery.png">
                     <source src="Video/Prototype.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
