--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
             <!-- Project 7 -->
             <div class="project-card">
-                <video controls poster="Images/Mountain_Momma_Bakery.png">
+                <video controls poster="Images/Band_Wireframe.png">
                     <source src="Video/Prototype.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
