slight improvements to games and fixed images

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="projects-container">
             <!-- Project 1 -->
             <div class="project-card">
-                <img src="Images/SEO.png" alt="SEO Basics Project Thumbnail">
+                <img src="Images/SEO_1.png" alt="SEO Basics Project Thumbnail">
                 <h3>Understanding Search Engine Optimization Basics</h3>
                 <p>This project explores the fundamentals of SEO and demonstrates how search engines operate through
                     crawling, indexing, and ranking. It highlights the role of meta tags, focusing on keywords and
@@ -73,12 +73,13 @@
                     hierarchy to organize content logically, improve readability, and signal content importance to
                     search
                     engines, improving discoverability and user experience.</p>
-                <a href="javascript:void(0);" class="btn popup-trigger" data-media="Images/SEO.png">View Project</a>
+                <a href="javascript:void(0);" class="btn popup-trigger"
+                    data-media="Images/SEO_1.png,Images/SEO_2.png">View Project</a>
             </div>
 
             <!-- Project 2 with pop-up gallery -->
             <div class="project-card">
-                <img src="Images/SASS_1.png" alt="Responsive Design & Analytics Thumbnail" class="popup-trigger"
+                <img src="Images/SASS_3.png" alt="Responsive Design & Analytics Thumbnail" class="popup-trigger"
                     data-images="Images/SASS_1.png,Images/SASS_2.png">
                 <h3>Responsive Design & Analytics</h3>
                 <p>This project demonstrates the importance of responsive web design and preprocessing in modern web
@@ -92,7 +93,7 @@
                     compares client-side and server-side preprocessing techniques, showcasing the benefits of tools like
                     LESS and SASS for efficient styling, reusable code, and improved site performance.</p>
                 <a href="javascript:void(0);" class="btn popup-trigger"
-                    data-media="Images/SASS_1.png,Images/SASS_2.png">View Project</a>
+                    data-media="Images/SASS_3.png,Images/SASS_4.png">View Project</a>
             </div>
 
             <!-- Project 3 -->
