--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             aerospace field while expanding my expertise in technology and development.
         </p>
         <p>
-            In just a few weeks, I’ll be graduating with a <strong>Bachelor's degree in Digital Media and Web
+            Graduated in August 2025 with a <strong>Bachelor's degree in Digital Media and Web
                 Design</strong>, combining my technical background with creative problem-solving skills to build
             meaningful,
             user-focused digital experiences.
